--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+body {
+  background-color: #3792CB;
+  color: darkblue;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#mortgage-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+input {
+  margin: 10px;
+}
+
+form {
+  background-color: skyblue;
+  border: 2px solid white;
+  border-radius: 5px;
+}
+
+#calculator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  margin-top: 20px;
+  border: 2px solid skyblue;
+  border-radius: 5px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+h1 {
+  font-family: monospace;
+  font-size: 3em;
+  background-color: darkblue;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 10px;
 }
